# aw-watcher-window

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.md  __main__.py  aw-watcher-window.spec  aw-watcher-x11.spec  example-config.toml  getRunningApplications.swift  get_window.c  macos.py  main.py  printAppTitle.scpt  pyproject.toml  requirements.txt  setup.py  x11.py
.github/workflows/: build.yml  ci.yml  codeql.yml
actwa/watchers/x11/: x11.py
aw/watchers/x11/: __init__.py  x11.py
aw_client/: __init__.py
aw_core/: __init__.py  config.py  log.py  models.py
aw_watcher_macos/: __init__.py  macos.py
aw_watcher_virtualdesktop/: __init__.py  config.py  lib.py  main.py  platform.py  windows.py
aw_watcher_window/: __init__.py  __main__.py  config.py  exceptions.py  houdini_utils.py  lib.py  macos.py  macos.swift  macos_applescript.py  macos_cli.py  macos_jxa.py  macos_permissions.py  macos_v2.py  main.py  nuke_utils.py  path_utils.py  printAppStatus.jxa  printAppTitle.scpt  util.py  windows.py  xlib.py  xprop.py
aw_watcher_x11/: x11.py  xprop.py
misc/: aw-watcher-x11.service
tests/: test_main.py  test_oneshot.py  test_platform.py
