[tool.poetry]
name = "aw-watcher-window"
version = "0.2.0"
description = "Window watcher for ActivityWatch"
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"

[tool.poetry.scripts]
aw-watcher-window = "aw_watcher_window:main"

[tool.poetry.dependencies]
python = "^3.8,<3.13"
aw-client = "^0.5"
python-xlib = {version = "*", platform = "linux"}
pywin32 = {version = "306", platform = "win32"}
pyobjc-framework-ApplicationServices = { version = "*", platform="darwin"}
pyobjc-framework-CoreText = {version = "*", platform="darwin"}
pyobjc-framework-OSAKit = {version = "*", platform="darwin"}

[tool.poetry.dev-dependencies]
pytest = "^7.0"
mypy = "*"
macholib = {version = "*", platform = "darwin"}  # Needed for pyinstaller
pyinstaller = {version = "*"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
